[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "models"
, "utils"]

[workspace.dependencies]
models = {path = "models"}
utils = {path = "utils"}

#dioxus-primitives = { git = "https://github.com/DioxusLabs/components" }
once_cell = "1.21.3"
console_error_panic_hook = {version = "0.1.7"}
dioxus = { version = "0.7.0-rc.0" }
web-sys = {version = "0.3.77"}
block_insight_cross = { path = "../block_insight_cross" }
solana-transaction-error = { version = "2.2" }
anyhow = { version = "1.0" }
futures-util = "0.3"
serde = { version = "1.0", features = ["default", "derive"] }
serde_json = "1.0"
solana-signature = { version = "2.3", features = ["default", "serde"] }
solana-transaction = { version = "2.2", features = ["serde", "bincode"] }
solana-transaction-status-client-types = { version = "2.2", default-features = false }
getrandom = {version = "0.3.3"}
reqwest = {version = "0.12.23"}
js-sys = "0.3.77"
#rust_utils = { git = "https://github.com/saintEvol/rust_utils.git" }

# workspace
ui = { path = "packages/ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[env]
API_BASE = "http"

