[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true, features = ["time", "macros"]}
block_insight_cross.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json = {workspace = true}
dioxus.workspace = true
futures-util.workspace = true
ewebsock = {workspace = true, features = ["default", "tokio", "tls"]}
prost = {workspace = true}

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = {workspace = true, features = ["Window", "Storage"]}
js-sys ={workspace = true}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
#tokio-tungstenite = "*"
#ws_stream_wasm = { version = "0.7.5", features = ["default"] }

[features]
#web = ["dioxus/web", "dep:web-sys"]
